--- a/twitter-roulette/src/components/header/Header.css
+++ b/twitter-roulette/src/components/header/Header.css
@@ -8,16 +8,39 @@
     align-items: center;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
-    background-color: #1da1f2;
+    /* background-color: #1da1f2; */
     /* background-image: linear-gradient(to right, #1da1f2, #33a9f3); */
-    background-image: linear-gradient(to right, #1da1f2, #9c43fa);
+    /* background-image: linear-gradient(to right, #1da1f2, #9c43fa);
     background-image: linear-gradient(to right, #1da1f2, #038cfc);
-    background-image: linear-gradient(to right, #1da1f2, #0356fc);
+    background-image: linear-gradient(to right, #1da1f2, #0356fc); */
     /* box-shadow: 0 0px 1px rgba(0, 0, 0, 0.23), 0 2px 2px rgba(0, 0, 0, 0.27); */
     padding: 0;
 }
 
-.header-titulo {
+#header-container-light {
+    background-image: linear-gradient(to right, #1da1f2, #0356fc);
+}
+
+#header-container-dark {
+    background-color: black;
+}
+
+.switch-container {
+    width: 30%;
+}
+
+.title-container {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-right {
+    width: 30%;
+}
+
+.header-title {
     font-weight: bold;
     font-size: 1.5rem;
     /* color: #1da1f2; */
