--- a/twitter-roulette/src/components/tweet/Tweet.css
+++ b/twitter-roulette/src/components/tweet/Tweet.css
@@ -15,12 +15,20 @@
 .tweet-container {
     display: flex;
     flex-direction: column;
-    border: solid 0.07rem rgba(0, 0, 0, 0.224);
     border-radius: 1rem;
     width: 34rem;
     margin-top: 3rem;
     font-family: "chirregular", sans-serif;
+}
+
+#tweet-container-light {
+    border: solid 0.07rem rgba(0, 0, 0, 0.224);
     background-color: white;
+}
+#tweet-container-dark {
+    border: solid 0.07rem rgba(138, 136, 136, 0.224);
+    background-color: black;
+    color: white;
 }
 
 .tweet-header {
@@ -35,24 +43,31 @@
     border-radius: 50%;
 }
 
-.nome-usuario-container {
+.name-user-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     margin: 0.5rem;
 }
-.nome {
+.name {
     font-size: 0.88rem;
     font-weight: 700;
     margin: 0;
 }
 
-.usuario {
+.user {
     font-size: 0.78rem;
     font-weight: 400;
     margin: 0;
+}
+
+#user-light {
     color: rgba(0, 0, 0, 0.377);
+}
+
+#user-dark {
+    color: #3c3e42;
 }
 
 .logo-container {
@@ -64,7 +79,7 @@
     height: 1rem;
 }
 
-.conteudo-container {
+.content-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -72,13 +87,18 @@
     margin: 0.3rem 1rem 1rem 1rem;
 }
 
-.conteudo {
+.content {
     text-align: left;
     font-size: 1.2rem;
     margin: 0;
 }
 
-.data-horario {
-    color: rgba(0, 0, 0, 0.532);
+.date-time {
     font-size: 0.85rem;
+}
+#date-time-light {
+    color: rgba(0, 0, 0, 0.532);
+}
+#date-time-dark {
+    color: #3c3e42;
 }
