--- a/twitter-roulette/src/components/header/Header.css
+++ b/twitter-roulette/src/components/header/Header.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    height: 3rem;
+    height: 6%;
     align-items: center;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
@@ -42,7 +42,7 @@
 
 .header-title {
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 150%;
     /* color: #1da1f2; */
     /* text-shadow: 1px 1px; */
 }
