--- a/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
+++ b/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
@@ -1,4 +1,4 @@
-.waiting-container{
+.waiting-container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -19,14 +19,14 @@
     justify-content: space-around;
 }
 
-.line{
+.line {
     width: 90%;
-    color: #AAB8C2;
+    color: #aab8c2;
 }
 
-.number-of-players{
-    color: #AAB8C2;
-    font-size: 150%;
+.number-of-players {
+    color: #aab8c2;
+    font-size: 100%;
     font-weight: bold;
     margin: 0;
     width: 100%;
@@ -34,7 +34,7 @@
     text-align: center;
 }
 
-.waiting-container-right{
+.waiting-container-right {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -42,7 +42,7 @@
     width: 30%;
     height: 90%;
 }
-.waiting-container-options{
+.waiting-container-options {
     height: 20%;
     background-color: #f5f8fa;
     padding: 2%;
@@ -52,7 +52,7 @@
     align-items: center;
 }
 
-.waiting-container-chat{
+.waiting-container-chat {
     height: 70%;
     background-color: white;
     border: solid 0.07rem rgba(0, 0, 0, 0.224);
