--- a/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
+++ b/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
@@ -48,7 +48,7 @@
     padding: 2%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
