--- a/twitter-roulette/src/components/waitingScreenButton/WaitingScreenButton.css
+++ b/twitter-roulette/src/components/waitingScreenButton/WaitingScreenButton.css
@@ -35,11 +35,15 @@
     color: white;
     border-radius: 3%;
     transition: ease-out 0.3s;
-    font-size: 80%;
+    font-size: 100%;
+    font-weight: bold;
     outline: none;
     background-color: #1da1f2;
     position: relative;
     z-index: 1;
+    font-family: "Roboto", sans-serif;
+    /* border: solid .1rem #0e85cf; */
+
 }
 
 .waiting-button-conteudo {
@@ -59,12 +63,17 @@
 }
 
 .waiting-button-container:hover {
+    transition: .3s;
     color: white;
     cursor: pointer;
+    background-color: #0e85cf;
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
 }
 
-.waiting-button-container:before {
-    transition: 0.5s all ease;
+/* .waiting-button-container:before {
+    transition: 0.2s all ease;
     position: absolute;
     top: 0;
     left: 50%;
@@ -72,17 +81,17 @@
     bottom: 0;
     opacity: 0;
     content: "";
-    background-color: #0356fc;
-}
+    background-color: #0e85cf;
+} */
 
-.waiting-button-container:hover:before {
-    transition: 0.5s all ease;
+/* .waiting-button-container:hover:before {
+    transition: 0.6s all ease;
     left: 0;
     right: 0;
     opacity: 1;
     z-index: -1;
-}
-
+} */
+/* 
 .waiting-button-container span {
     display: block;
     position: absolute;
@@ -157,4 +166,4 @@
     transform-origin: right;
     transition: transform 0.5s;
     transition-delay: 0.6s;
-}
+} */
