--- a/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
+++ b/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
@@ -8,15 +8,23 @@
 
 .waiting-container-players {
     margin: 1% 0 1% 0;
-    background-color: white;
     width: 30%;
     height: 90%;
-    border: solid 0.07rem rgba(0, 0, 0, 0.224);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+#waiting-container-players-light {
+    border: solid 0.07rem rgba(0, 0, 0, 0.224);
+    background-color: white;
+}
+#waiting-container-players-dark {
+    border: solid 0.07rem rgba(138, 136, 136, 0.224);
+    background-color: black;
+    color: white;
 }
 
 .line {
@@ -42,20 +50,38 @@
     width: 30%;
     height: 90%;
 }
+
 .waiting-container-options {
     height: 20%;
-    background-color: #f5f8fa;
     padding: 2%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
+#waiting-container-options-light {
+    background-color: #f5f8fa;
+}
+#waiting-container-options-dark {
+    background-color: black;
+    color: white;
+}
 
 .waiting-container-chat {
     height: 70%;
-    background-color: white;
-    border: solid 0.07rem rgba(0, 0, 0, 0.224);
     border-radius: 1rem;
     justify-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+#waiting-container-chat-light{
+    background-color: white;
+    border: solid 0.07rem rgba(0, 0, 0, 0.224);
+}
+#waiting-container-chat-dark{
+    border: solid 0.07rem rgba(138, 136, 136, 0.224);
+    background-color: black;
+    color: white;
 }
