--- a/twitter-roulette/src/components/button/Button.css
+++ b/twitter-roulette/src/components/button/Button.css
@@ -1,7 +1,7 @@
-.button-ext-container{
-    width: 35%;
-    height: 10%;
-    margin: .7rem 0 .7rem 0;
+.button-ext-container {
+    width: 30%;
+    height: 8%;
+    margin: 0.7rem 0 0.7rem 0;
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
@@ -10,20 +10,20 @@
     padding: 1rem 1.8rem 1rem 1.8rem;
     cursor: pointer;
 }
-#button-ext-container-light{
-    border:solid 0.08rem #1da1f2;
+#button-ext-container-light {
+    border: solid 0.08rem #1da1f2;
 }
-#button-ext-container-light:hover{
+#button-ext-container-light:hover {
     transition: 0.2s;
-    border:solid 0.08rem #1474af;
+    border: solid 0.08rem #1474af;
 }
 
-#button-ext-container-dark{
+#button-ext-container-dark {
     border: solid 0.08rem rgba(138, 136, 136, 0.224);
 }
-#button-ext-container-dark:hover{
+#button-ext-container-dark:hover {
     transition: 0.2s;
-    border:solid 0.08rem rgba(17, 58, 119, 0.224);
+    border: solid 0.08rem rgba(17, 58, 119, 0.224);
 }
 
 .button-container {
@@ -37,45 +37,41 @@
     border-radius: 2rem;
 }
 
-
-#button-container-light{
+#button-container-light {
     background-color: #1da1f2;
-    border: solid 0.1rem rgba(0, 0, 0, 0.224); 
+    border: solid 0.1rem rgba(0, 0, 0, 0.224);
 }
-
 
 #button-container-light:hover {
     transition: 0.6s;
     background-color: #1474af;
-  }
+}
 
-#button-container-dark{
+#button-container-dark {
     border: solid 0.1rem rgba(138, 136, 136, 0.224);
     background-color: #0a0a0aec;
 }
 
-
 #button-container-dark:hover {
     transition: 0.6s;
     background-color: rgba(121, 121, 121, 0.224);
-  }
+}
 
-.name-button{
+.name-button {
     flex-grow: 1;
     align-self: center;
     justify-self: center;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
-.img-button{
+.img-button {
     border-radius: 50%;
-    height: auto; 
-    width: auto; 
-    max-width: 3.5rem; 
+    height: auto;
+    width: auto;
+    max-width: 3.5rem;
     max-height: 3.5rem;
     border: solid 0.07rem #000000;
-   
 }
 
 #name-button-light {
