--- a/twitter-roulette/src/components/chat/Chat.css
+++ b/twitter-roulette/src/components/chat/Chat.css
@@ -1,20 +1,68 @@
-.container-msgs{
+.container-msgs {
     height: 84%;
     max-height: 90%;
     width: 94%;
-    background-color: #F5F8FA;
     margin: 3% 0 0 0;
-    overflow-y:auto;
+    overflow-y: auto;
     display: flex;
     flex-direction: column-reverse;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
 
-.container-input{
+#container-msgs-light {
+    background-color: #f5f8fa;
+}
+
+#container-msgs-dark {
+    background-color: #14171a;
+}
+
+.container-msgs::-webkit-scrollbar {
+    width: 0.5rem;
+}
+.container-msgs::-webkit-scrollbar-track {
+    background: #f5f8fa;
+}
+.container-msgs::-webkit-scrollbar-thumb {
+    background-color: #e1e8ed;
+    /* border-radius: 1rem; */
+}
+
+.container-input {
     height: 10%;
-    width: 100%;    
+    width: 100%;
     max-height: 10%;
-    background-color: aqua;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.message-input {
+    width: 90%;
+    height: 60%;
+    border-radius: 0.5rem;
+    border: none;
+    padding-left: 3%;
+}
 
+#message-input-light {
+    background-color: #f5f8fa;
+}
+
+#message-input-dark {
+    background-color: #14171a;
+}
+
+.message-input::placeholder {
+    color: #aab8c2;
+}
+
+#message-input-light:focus {
+    outline-color: #657786;
+}
+
+#message-input-dark:focus {
+    outline: 1px solid #657786;
+    color: #aab8c2;
+}
