--- a/twitter-roulette/src/components/gameScreen/GameScreen.css
+++ b/twitter-roulette/src/components/gameScreen/GameScreen.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 100%;
-    height: 92%;
+    height: 94%;
 }
 
 /* #game-screen-container-light {
@@ -21,7 +21,7 @@
 }
 
 .question {
-    font-size: 3rem;
+    font-size: 200%;
     margin: 0;
 }
 
@@ -35,7 +35,7 @@
 
 .round {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 100%;
 }
 #round-light {
     color: #657786;
@@ -51,6 +51,6 @@
     justify-content: space-around;
     align-items: center;
     width: 50%;
-    margin-top: 1rem;
-    max-height: 100%;
+    margin-top: 1%;
+    height: 40%;
 }
