--- a/twitter-roulette/src/components/message/Message.css
+++ b/twitter-roulette/src/components/message/Message.css
@@ -1,12 +1,58 @@
-.my-message-container{
+.my-message-container {
+    width: 60%;
+    max-width: 60%;
     align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 2%;
+    margin-bottom: 2%;
 }
 
-.my-message{
-    border: solid 0.07rem rgba(0, 0, 0, 0.224);
-    padding: 1%;
-    text-align: end;
-    background-color: #1DA1F2;
-    border-radius: 10%;
+.my-user {
+    font-size: 80%;
+    color: #657786;
+    margin-bottom: 1%;
+    margin-right: 2%;
+}
+
+.my-message {
+    block-size: fit-content;
+    width: fit-content;
+    min-width: 20%;
+    padding: 4%;
+    text-align: left;
+    background-color: #96cfb9;
+    border-radius: 1rem;
+    color: white;
+}
+
+.other-message-container {
+    width: 60%;
+    max-width: 60%;
+    display: inline-block;
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 2%;
+    margin-left: 2%;
+}
+
+.other-user {
+    font-size: 80%;
+    color: #657786;
+    margin-bottom: 1%;
+    margin-left: 2%;
+}
+
+.other-message {
+    block-size: fit-content;
+    width: fit-content;
+    min-width: 20%;
+    padding: 4%;
+    text-align: left;
+    background-color: #54b9d3;
+    border-radius: 1rem;
     color: white;
 }
