--- a/twitter-roulette/src/components/tweet/Tweet.css
+++ b/twitter-roulette/src/components/tweet/Tweet.css
@@ -16,8 +16,9 @@
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
-    width: 34rem;
-    margin-top: 2rem;
+    width: 40%;
+    max-width: 40%;
+    margin-top: 1%;
     font-family: "chirregular", sans-serif;
 }
 
@@ -34,9 +35,14 @@
 .tweet-header {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    margin: 1rem;
-    width: 100%;
+    justify-content: space-between;
+    margin: 2%;
+    max-width: 95%;
+}
+
+.container-img-user {
+    display: flex;
+    flex-direction: row;
 }
 
 .img {
@@ -51,13 +57,13 @@
     margin: 0.5rem;
 }
 .name {
-    font-size: 0.88rem;
+    font-size: 80%;
     font-weight: 700;
     margin: 0;
 }
 
 .user {
-    font-size: 0.78rem;
+    font-size: 70%;
     font-weight: 400;
     margin: 0;
 }
@@ -72,7 +78,7 @@
 
 .logo-container {
     justify-self: flex-end;
-    margin-left: 54%;
+    /* margin-left: 54%; */
 }
 .logo {
     width: 1.4rem;
@@ -84,17 +90,17 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin: 0.3rem 1rem 1rem 1rem;
+    margin: 0 1% 1% 3%;
 }
 
 .content {
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 120%;
     margin: 0;
 }
 
 .date-time {
-    font-size: 0.85rem;
+    font-size: 80%;
 }
 #date-time-light {
     color: rgba(0, 0, 0, 0.532);
