--- a/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
+++ b/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
@@ -4,12 +4,13 @@
     width: 100%;
     height: 94%;
     justify-content: space-around;
+    align-items: center;
 }
 
 .waiting-container-players {
-    margin: 1% 0 1% 0;
     width: 30%;
     height: 90%;
+    padding: 1%;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -29,12 +30,21 @@
 
 .line {
     width: 90%;
-    color: #aab8c2;
+    height: 1%;
+    border: none;
+}
+
+#line-light {
+    background-color: #e1e8ed;
+}
+
+#line-dark {
+    background-color: #14171a;
 }
 
 .number-of-players {
     color: #aab8c2;
-    font-size: 100%;
+    font-size: 80%;
     font-weight: bold;
     margin: 0;
     width: 100%;
@@ -76,11 +86,11 @@
     justify-content: space-between;
     align-items: center;
 }
-#waiting-container-chat-light{
+#waiting-container-chat-light {
     background-color: white;
     border: solid 0.07rem rgba(0, 0, 0, 0.224);
 }
-#waiting-container-chat-dark{
+#waiting-container-chat-dark {
     border: solid 0.07rem rgba(138, 136, 136, 0.224);
     background-color: black;
     color: white;
