--- a/twitter-roulette/src/components/player/Player.css
+++ b/twitter-roulette/src/components/player/Player.css
@@ -1,72 +1,98 @@
 .initial-player-container {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    /* background-color: aqua; */
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* background-color: aqua; */
+}
+
+.initial-imgs-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .initial-player-photo {
-    height: auto;
-    width: auto;
-    max-width: 80%;
-    max-height: 80%;
-    margin-right: 4%;
+  height: auto;
+  width: auto;
+  max-width: 80%;
+  max-height: 80%;
+  margin-right: 4%;
+}
+
+.initial-edit-photo-container {
+  width: 10%;
+  position: absolute;
+  top: 5%;
+  left: 70%;
+  background-color: #aab8c2;
+  border: 0.25rem solid #d2d7db;
+  padding: 2%;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.initial-edit-photo {
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .initial-player-data-container {
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .initial-player-name {
-    font-size: 82.5%;
-    color: #aab8c2;
+  font-size: 82.5%;
+  color: #aab8c2;
 }
 
 .initial-player-user {
-    font-size: 82.5%;
-    color: #aab8c2;
+  font-size: 82.5%;
+  color: #aab8c2;
 }
 
 .initial-input-name {
-    min-width: 100px;
-    width: 90%;
-    height: 15%;
-    border-radius: 0.4rem;
-    border: none;
-    margin: 1% 0 0 0;
-    padding: 3%;
-    background-color: rgba(255, 255, 255, 0.1);
+  min-width: 120px;
+  width: 90%;
+  height: 15%;
+  border-radius: 0.4rem;
+  border: none;
+  margin: 1% 0 0 0;
+  padding: 3%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .initial-input-name::placeholder {
-    color: #aab8c2;
+  color: #aab8c2;
 }
 
 .initial-input-name:focus {
-    outline-color: #657786;
+  outline-color: #657786;
 }
 
 .initial-input-user {
-    min-width: 100px;
-    width: 90%;
-    height: 15%;
-    border-radius: 0.4rem;
-    border: none;
-    margin: 1% 0 0 0;
-    padding: 3%;
-    background-color: rgba(255, 255, 255, 0.1);
+  min-width: 120px;
+  width: 90%;
+  height: 15%;
+  border-radius: 0.4rem;
+  border: none;
+  margin: 1% 0 0 0;
+  padding: 3%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .initial-input-user::placeholder {
-    color: #aab8c2;
+  color: #aab8c2;
 }
 
 .initial-input-user:focus {
-    outline-color: #657786;
+  outline-color: #657786;
 }
 
 /* #message-input-light {
