--- a/twitter-roulette/src/components/header/Header.css
+++ b/twitter-roulette/src/components/header/Header.css
@@ -24,6 +24,8 @@
 
 #header-container-dark {
     background-color: black;
+    background-image: linear-gradient(to right, #201629, black);
+    background-image: linear-gradient(to right, #18131c, black);
 }
 
 .switch-container {
