--- a/twitter-roulette/src/components/initialScreen/InitialScreen.css
+++ b/twitter-roulette/src/components/initialScreen/InitialScreen.css
@@ -1,19 +1,28 @@
 .initial-container {
-  height: 94%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: linear-gradient(to right, #1da1f2, #a103fc);
+    height: 94%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#initial-container-light {
+    background-image: linear-gradient(to right, #1da1f2, #a103fc);
+}
+
+#initial-container-dark {
+    background-color: black;
+    background-image: linear-gradient(to right, #201629, black);
+    background-image: linear-gradient(to right, #18131c, black);
 }
 
 .initial-play-container {
-  width: 80%;
-  height: 30%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  /* background-color: #1da1f2; */
+    width: 80%;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    /* background-color: #1da1f2; */
 }
