--- a/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
+++ b/twitter-roulette/src/components/waitingScreen/WaitingScreen.css
@@ -5,6 +5,7 @@
     height: 94%;
     justify-content: space-around;
     align-items: center;
+    position: relative;
 }
 
 .waiting-container-players {
@@ -16,6 +17,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    justify-content: flex-start;
+}
+
+.outer-player-container {
+    width: 100%;
+    max-width: 100%;
+    height: 8%;
+    max-height: 11%;
+    margin: 2.7%;
 }
 
 #waiting-container-players-light {
@@ -24,7 +34,7 @@
 }
 #waiting-container-players-dark {
     border: solid 0.07rem rgba(138, 136, 136, 0.224);
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
 }
 
@@ -73,7 +83,7 @@
     background-color: #f5f8fa;
 }
 #waiting-container-options-dark {
-    background-color: black;
+    background-color: transparent;
     color: white;
 }
 
