--- a/twitter-roulette/src/components/waitingScreenPlayer/WaitingScreenPlayer.css
+++ b/twitter-roulette/src/components/waitingScreenPlayer/WaitingScreenPlayer.css
@@ -3,20 +3,28 @@
 .player-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     max-width: 100%;
-    height: 8%;
-    max-height: 11%;
+    height: 100%;
+    max-height: 100%;
     margin: 0.8%;
+}
+
+.player-info-container {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .img-player {
     height: auto;
     width: auto;
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 80%;
+    max-height: 80%;
     margin-right: 3%;
     margin-left: 3%;
 }
@@ -24,11 +32,25 @@
 .name-player {
     font-size: 100%;
     color: #191970;
-    margin-left: 1%;
-    width: 82%;
+    margin: 0 4% 0 1%;
     font-family: "Montserrat", sans-serif;
 }
 
 #name-player-dark {
     color: #657786;
+}
+
+.player-account {
+    font-size: 70%;
+    color: #aab8c2;
+    font-family: "Montserrat", sans-serif;
+}
+
+.img-crown {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 50%;
+    margin-right: 5%;
+    margin-left: 3%;
 }
