--- a/twitter-roulette/src/components/tweet/Tweet.css
+++ b/twitter-roulette/src/components/tweet/Tweet.css
@@ -1,110 +1,144 @@
 @font-face {
-    font-family: "chirpregular";
-    src: url("fonts/chirp_regular-webfont.woff") format("woff");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "chirpregular";
+  src: url("fonts/chirp_regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: "chirpbold";
-    src: url("fonts/chirp_bold-webfont.woff") format("woff2");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "chirpbold";
+  src: url("fonts/chirp_bold-webfont.woff") format("woff2");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .tweet-container {
-    display: flex;
-    flex-direction: column;
-    border-radius: 1rem;
-    width: 40%;
-    max-width: 40%;
-    margin-top: 1%;
-    font-family: "chirregular", sans-serif;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  border-radius: 1rem;
+  width: 30%;
+  height: 50%;
+  max-width: 30%;
+  /* max-height: 40%; */
+  font-family: "chirregular", sans-serif;
 }
 
 #tweet-container-light {
-    border: solid 0.07rem rgba(0, 0, 0, 0.224);
-    background-color: white;
+  border: solid 0.07rem rgba(0, 0, 0, 0.224);
+  background-color: white;
 }
 #tweet-container-dark {
-    border: solid 0.07rem rgba(138, 136, 136, 0.224);
-    background-color: black;
-    color: white;
+  border: solid 0.07rem rgba(138, 136, 136, 0.224);
+  background-color: black;
+  color: white;
 }
 
 .tweet-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 2%;
-    max-width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 10%;
+  margin: 2%;
+  max-width: 95%;
 }
 
 .container-img-user {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.img {
-    border-radius: 50%;
+.tweet-avatar-img {
+  height: auto;
+  width: auto;
+  max-width: 120%;
+  max-height: 120%;
+  border-radius: 50%;
 }
 
 .name-user-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 0.5rem;
 }
 .name {
-    font-size: 80%;
-    font-weight: 700;
-    margin: 0;
+  font-size: 80%;
+  font-weight: 700;
+  margin: 0;
 }
 
 .user {
-    font-size: 70%;
-    font-weight: 400;
-    margin: 0;
+  font-size: 70%;
+  font-weight: 400;
+  margin: 0;
 }
 
 #user-light {
-    color: rgba(0, 0, 0, 0.377);
+  color: rgba(0, 0, 0, 0.377);
 }
 
 #user-dark {
-    color: #3c3e42;
+  color: #3c3e42;
 }
 
 .logo-container {
-    justify-self: flex-end;
-    /* margin-left: 54%; */
+  justify-self: flex-end;
+  /* margin-left: 54%; */
 }
 .logo {
-    width: 1.4rem;
-    height: 1rem;
+  width: 1.4rem;
+  height: 1rem;
 }
 
 .content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin: 0 1% 1% 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  max-height: 80%;
+  max-width: 100%;
+  margin: 0 3% 1% 3%;
 }
 
 .content {
-    text-align: left;
-    font-size: 120%;
-    margin: 0;
+  /* height: 20%; */
+  text-align: left;
+  font-size: 120%;
+  margin: 3% 0 1% 0;
+  max-height: 40%;
+  font-size: 1.1vw;
+}
+
+.tweet-imgs-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+  border: 3rem;
+  width: 100%;
+  max-width: 100%;
+  max-height: 60%;
+}
+
+.tweet-img-content {
+  width: 100%;
+  max-height: 100%;
+  /* height: 100%; */
+  object-fit: scale-down;
+  overflow: hidden;
 }
 
 .date-time {
-    font-size: 80%;
+  font-size: 80%;
+  margin: 0;
 }
 #date-time-light {
-    color: rgba(0, 0, 0, 0.532);
+  color: rgba(0, 0, 0, 0.532);
 }
 #date-time-dark {
-    color: #3c3e42;
+  color: #3c3e42;
 }
