--- a/twitter-roulette/src/components/tweet/Tweet.css
+++ b/twitter-roulette/src/components/tweet/Tweet.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
     font-family: "chirpregular";
     src: url("fonts/chirp_regular-webfont.woff") format("woff");
     font-weight: normal;
@@ -15,35 +15,65 @@
 .tweet-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+
+    padding: 0.8%;
     border-radius: 1rem;
-    width: 30%;
-    max-height: 50%;
-    max-width: 30%;
     font-family: "chirregular", sans-serif;
 }
 
-#tweet-container-light {
+#tweet-container-textimg-light,
+#tweet-container-text-light,
+#tweet-container-img-light {
     border: solid 0.07rem rgba(0, 0, 0, 0.224);
     background-color: white;
 }
-#tweet-container-dark {
+
+#tweet-container-textimg-dark,
+#tweet-container-text-dark,
+#tweet-container-img-dark {
     border: solid 0.07rem rgba(138, 136, 136, 0.224);
     background-color: black;
     color: white;
 }
 
+#tweet-container-textimg-light,
+#tweet-container-textimg-dark {
+    width: 40%;
+    min-height: 20%;
+    max-height: 50%;
+}
+
+#tweet-container-text-light,
+#tweet-container-text-dark {
+    width: 40%;
+    min-height: 15%;
+    max-height: 25%;
+}
+
+#tweet-container-img-light,
+#tweet-container-img-dark {
+    width: 25%;
+    min-height: 20%;
+    max-height: 50%;
+}
+
 .tweet-header {
+    height: 13.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 10%;
-    margin: 2%;
-    max-width: 95%;
 }
 
-.container-img-user {
+.left-header-container {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    width: 80%;
+}
+
+#left-header-container-blur {
+    filter: blur(10px) brightness(0.7);
 }
 
 .tweet-avatar-img {
@@ -54,85 +84,129 @@
     border-radius: 50%;
 }
 
-.name-user-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    margin: 0.5rem;
-}
-.name {
-    font-size: 70%;
-    font-weight: 700;
-    margin: 0;
-}
-
-.user {
-    font-size: 60%;
-    font-weight: 400;
-    margin: 0;
-}
-
-#user-light {
-    color: rgba(0, 0, 0, 0.377);
-}
-
-#user-dark {
-    color: #3c3e42;
-}
-
-.logo-container {
-    justify-self: flex-end;
-}
-.logo {
-    width: 1.4rem;
-    height: 1rem;
-}
-
-.content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    height: 80%;
-    max-height: 80%;
+#tweet-avatar-img-textimg {
+    height: auto;
+    width: auto;
     max-width: 100%;
-    margin: 0 3% 1% 3%;
+    max-height: 100%;
+    border-radius: 50%;
 }
 
-.content {
-    text-align: left;
-    margin: 3% 0 1% 0;
-    max-height: 40%;
-    font-size: 0.95vw;
+#tweet-avatar-img-text {
+    height: auto;
+    width: auto;
+    max-width: 160%;
+    max-height: 160%;
+    border-radius: 50%;
 }
 
-.tweet-imgs-container {
+.name-user-container {
+    margin-left: 2%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-self: center;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    border: 3rem;
-    width: 25vw;
-    max-width: 25vw;
-    max-height: 20vh;
+}
+
+.tweet-name {
+    font-size: 80%;
+    margin: 0;
+    font-weight: 700;
+}
+.tweet-user {
+    font-size: 60%;
+    margin: 0;
+    font-weight: 400;
+    color: #aab8c2;
+}
+
+.tweet-logo {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 50%;
+    align-self: center;
+}
+
+#tweet-logo-textimg {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 50%;
+    align-self: center;
+}
+
+#tweet-logo-text {
+    height: auto;
+    width: auto;
+    max-width: 80%;
+    max-height: 80%;
+    align-self: center;
+}
+
+.tweet-content {
+    max-height: 81.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.tweet-text {
+    width: 100%;
+    margin: 0;
+}
+
+#tweet-text-textimg {
+    margin-top: 1%;
+    height: 30%;
+    font-size: 75%;
+}
+
+#tweet-text-text {
+    height: 90%;
+    font-size: 95%;
+}
+.tweet-imgs-container {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#tweet-imgs-container-textimg {
+    height: 70%;
+}
+
+#tweet-imgs-container-img {
+    height: 100%;
 }
 
 .tweet-img-content {
-    width: 100%;
+    height: auto;
+    width: auto;
+    max-width: 50%;
     max-height: 100%;
-    object-fit: scale-down;
-    overflow: hidden;
 }
-.date-time {
-    font-size: 0.7vw;
-    margin: 0;
+
+#tweet-img-content-textimg {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 90%;
+    border-radius: 5%;
 }
-#date-time-light {
-    color: rgba(0, 0, 0, 0.532);
+
+#tweet-img-content-img {
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    max-height: 90%;
+    border-radius: 5%;
 }
-#date-time-dark {
-    color: #3c3e42;
-} */
+
+.tweet-footer {
+    height: 5%;
+    font-size: 80%;
+    color: #aab8c2;
+}
